--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -36,7 +36,7 @@ Colors:
 - Backgrounds - light gray #fbfbfb
 - Background - dark blue #153e52
 - Backgrounds navbar, footer - dark gray #113448
-- Buttons, bullets, icons - green #14bf98
+- Buttons, bullets, icons - green #db0303
 - Headings text - black #484a46
 - Body text - gray #787976
 - Body text - light gray #dfe5ec
@@ -119,7 +119,7 @@ a:hover {
 }
 
 a.green {
-	color: #14bf98;
+	color: #db0303;
 }
 
 a.white,
@@ -140,16 +140,16 @@ strong {
 }
 
 .section-title {
-	color: #14bf98;
+	color: #db0303;
 	font: 500 0.8125rem/1.125rem "Montserrat", sans-serif;
 }
 
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #db0303;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #db0303;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -158,16 +158,16 @@ strong {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #db0303;
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.375rem 2.125rem 1.375rem 2.125rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #db0303;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #db0303;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -176,7 +176,7 @@ strong {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #fff;
 	text-decoration: none;
 }
 
@@ -377,9 +377,9 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.125rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #db0303;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #db0303;
 	color: #fff;
 	font: 700 0.75rem/1.75rem "Montserrat", sans-serif;
 	cursor: pointer;
@@ -388,7 +388,7 @@ input[type='checkbox'] {
 
 .form-control-submit-button:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #db0303;
 }
 
 /* Form Success And Error Message Formatting */
@@ -682,7 +682,7 @@ input[type='checkbox'] {
 
 .navbar-custom .nav-item .nav-link:hover,
 .navbar-custom .nav-item .nav-link.active {
-	color: #14bf98;
+	color: #db0303;
 }
 
 /* Dropdown Menu */
@@ -727,7 +727,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover .item-text {
-	color: #14bf98;
+	color: #db0303;
 }
 
 .navbar-custom .dropdown-items-divide-hr {
@@ -940,7 +940,7 @@ input[type='checkbox'] {
 }
 
 .cards-2 .list-unstyled .fas {
-	color: #14bf98;
+	color: #db0303;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -957,7 +957,7 @@ input[type='checkbox'] {
 }
 
 .cards-2 .price span {
-	color: #14bf98;
+	color: #db0303;
 }
 
 .cards-2 .button-container {
@@ -1005,9 +1005,9 @@ input[type='checkbox'] {
 	width: 2.25rem;
 	height: 2.25rem;
 	margin-right: 0.875rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #db0303;
 	border-radius: 50%;
-	background-color: #14bf98;
+	background-color: #db0303;
 	color: #fff;
 	font: 700 1rem/2.125rem "Montserrat", sans-serif;
 	text-align: center;
@@ -1023,8 +1023,8 @@ input[type='checkbox'] {
 }
 
 .accordion .item:hover span[aria-expanded="false"] .circle-numbering {
-	border: 0.125rem solid #14bf98;
-	color: #14bf98;
+	border: 0.125rem solid #db0303;
+	color: #db0303;
 }
 
 .accordion .accordion-title {
@@ -1040,11 +1040,11 @@ input[type='checkbox'] {
 }
 
 .accordion .item:hover .accordion-title {
-	color: #14bf98;
+	color: #db0303;
 }
 
 .accordion span[aria-expanded="true"] .accordion-title {
-	color: #14bf98;
+	color: #db0303;
 }
 
 .accordion .accordion-body {
@@ -1083,7 +1083,7 @@ input[type='checkbox'] {
 
 .tabs .nav-link:hover,
 .tabs .nav-link.active {
-	color: #14bf98;
+	color: #db0303;
 }
 
 .tabs .nav-link .fas {
@@ -1113,7 +1113,7 @@ input[type='checkbox'] {
 	display: block;
 	padding-left: 1.5rem;
 	border-radius: 0.125rem;
-	background: linear-gradient(to bottom right, #14bf98, #1bd1a7);
+	background: linear-gradient(to bottom right, #db0303, #1bd1a7);
 }
 
 .tabs #tab-1 .progress-bar.first {
@@ -1139,7 +1139,7 @@ input[type='checkbox'] {
 }
 
 .tabs #tab-2 .list-unstyled .media-bullet {
-	color: #14bf98;
+	color: #db0303;
 	font-weight: 600;
 	font-size: 2rem;
 	line-height: 2rem;
@@ -1150,7 +1150,7 @@ input[type='checkbox'] {
 }
 
 .tabs #tab-3 .list-unstyled .fas {
-	color: #14bf98;
+	color: #db0303;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1263,7 +1263,7 @@ input[type='checkbox'] {
 }
 
 .form-1 .list-unstyled .fas {
-	color: #14bf98;
+	color: #db0303;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1348,12 +1348,12 @@ input[type='checkbox'] {
 }
 
 .filter .button-group a:hover {
-	background-color: #14bf98;
+	background-color: #db0303;
 	color: #fff;
 }
 
 .filter .button-group a.button.is-checked {
-	background-color: #14bf98;
+	background-color: #db0303;
 	color: #fff;
 }
 
@@ -1435,7 +1435,7 @@ input[type='checkbox'] {
 	margin-bottom: 0.625rem;
 	margin-left: 0;
 	border: none;
-	background-color: #14bf98;
+	background-color: #db0303;
 }
 
 .lightbox-basic h6 {
@@ -1566,7 +1566,7 @@ input[type='checkbox'] {
 }
 
 .basic-2 .fa-stack:hover .fa-stack-1x {
-	color: #14bf98;
+	color: #db0303;
 }
 
 
@@ -1599,7 +1599,7 @@ input[type='checkbox'] {
 }
 
 .counter .list-unstyled .fas {
-	color: #14bf98;
+	color: #db0303;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1621,7 +1621,7 @@ input[type='checkbox'] {
 .counter #counter .counter-value {
 	display: inline-block;
 	margin-bottom: 0.125rem;
-	color: #14bf98;
+	color: #db0303;
 	font: 700 2.875rem/3.25rem "Montserrat", sans-serif;
 	vertical-align: middle;
 }
@@ -1666,7 +1666,7 @@ input[type='checkbox'] {
 .form-2 .list-unstyled .fab {
 	margin-right: 0.5rem;
 	font-size: 0.875rem;
-	color: #14bf98;
+	color: #db0303;
 }
 
 .form-2 .list-unstyled .fa-phone {
@@ -1707,7 +1707,7 @@ input[type='checkbox'] {
 }
 
 .form-2 .fa-stack:hover .fa-stack-1x {
-	color: #14bf98;
+	color: #db0303;
 }
 
 
@@ -1764,7 +1764,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #14bf98 url("../images/up-arrow.png") no-repeat center 47%;
+	background: #db0303 url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -1821,7 +1821,7 @@ a:hover.back-to-top {
 }
 
 .ex-basic-2 .list-unstyled .fas {
-	color: #14bf98;
+	color: #db0303;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1876,7 +1876,7 @@ a:hover.back-to-top {
 	
 	.navbar-custom .nav-item .nav-link:hover,
 	.navbar-custom .nav-item .nav-link.active {
-		color: #14bf98;
+		color: #db0303;
 	}
 
 	.navbar-custom.top-nav-collapse {
@@ -1895,7 +1895,7 @@ a:hover.back-to-top {
 	
 	.navbar-custom.top-nav-collapse .nav-item .nav-link:hover,
 	.navbar-custom.top-nav-collapse .nav-item .nav-link.active {
-		color: #14bf98;
+		color: #db0303;
 	}
 
 	.navbar-custom .dropdown-menu {
@@ -2067,7 +2067,7 @@ a:hover.back-to-top {
 	}
 
 	.navbar-custom .fa-stack:hover .fa-stack-1x {
-		color: #14bf98;
+		color: #db0303;
 	}
 	/* end of navigation */
 
